# ImageProcessor

./: CMakeLists.txt  ImageData.h  ImageProcessor.sln  ImageProcessor.vcxproj  ImageProcessor.vcxproj.filters  Main.cpp  README.md  stb_image.cpp  stb_image_write.cpp
src/: main.cpp
